# app/Http/Controllers/GoodsOrdersController.php
@@ -14,16 +14,27 @@ class GoodsOrdersController extends Controller
 
         $validator = Validator::make($request->all(), [
             'upload_loc_id' => 'required',
+            'upload_loc_info' => 'required',
             'onload_loc_id' => 'required',
+            'onload_loc_info' => 'required',
+            'order_title' => 'required',
             'kuzov_type' => 'required',
             'loading_type' => 'required',
-            'loading_date' => 'required',
+            'start_date' => 'required',
+            'end_date' => 'required',
             'max_weight' => 'required',
             'max_volume' => 'required',
             'payment_type' => 'required',
+            'payment_nds' => 'required',
+            'prepaid' => 'required',
             'ruble_per_kg' => 'required',
             'phone_number' => 'required',
             'company_name' => 'required',
+            'description' => 'required',
+            'manager_id' => 'required',
+            'material_type' => 'required',
+            'material_info' => 'required',
+
         ]);
         if ($validator->fails()) {
             return response()->json([
@@ -35,16 +46,26 @@ class GoodsOrdersController extends Controller
         $goods_orders = new GoodsOrders();
         $goods_orders->company_id = Auth::id();
         $goods_orders->upload_loc_id = $validator->validated()['upload_loc_id'];
+        $goods_orders->upload_loc_info = $validator->validated()['upload_loc_info'];
         $goods_orders->onload_loc_id = $validator->validated()['onload_loc_id'];
+        $goods_orders->onload_loc_info = $validator->validated()['onload_loc_info'];
+        $goods_orders->order_title = $validator->validated()['order_title'];
         $goods_orders->kuzov_type = $validator->validated()['kuzov_type'];
         $goods_orders->loading_type = $validator->validated()['loading_type'];
-        $goods_orders->loading_date = $validator->validated()['loading_date'];
+        $goods_orders->start_date = $validator->validated()['start_date'];
+        $goods_orders->end_date = $validator->validated()['end_date'];
         $goods_orders->max_weight = $validator->validated()['max_weight'];
         $goods_orders->max_volume = $validator->validated()['max_volume'];
         $goods_orders->payment_type = $validator->validated()['payment_type'];
+        $goods_orders->payment_nds = $validator->validated()['payment_nds'];
+        $goods_orders->prepaid = $validator->validated()['prepaid'];
         $goods_orders->ruble_per_kg = $validator->validated()['ruble_per_kg'];
         $goods_orders->phone_number = $validator->validated()['phone_number'];
         $goods_orders->company_name = $validator->validated()['company_name'];
+        $goods_orders->description = $validator->validated()['description'];
+        $goods_orders->manager_id = $validator->validated()['manager_id'];
+        $goods_orders->material_type = $validator->validated()['material_type'];
+        $goods_orders->material_info = $validator->validated()['material_info'];
         $goods_orders->is_disabled = '0';
         $goods_orders->save();
 //        $data =  DB::table('goods_orders')->latest()->first();
