# storage/api-docs/api-docs.yaml
@@ -303,10 +303,22 @@ paths:
                   type: integer
                   required: true
                   example: "3400"
+                upload_loc_info:
+                  type: string
+                  required: true
+                  example: "НКХП"
                 onload_loc_id:
                   type: integer
                   required: true
                   example: "6500"
+                onload_loc_info:
+                  type: string
+                  required: true
+                  example: "НПК"
+                order_title:
+                  type: string
+                  required: true
+                  example: "Lvacqi meqena"
                 kuzov_type:
                   type: string
                   required: true
@@ -317,10 +329,14 @@ paths:
                   required: true
                   example: "элеватор"
                   description: ". Тип загрузки ( элеватор/трактор/маниту/зерномет, кун,труба ) + можно добавить рукописно"
-                loading_date:
+                start_date:
                   type: string
                   required: true
                   example: "2023-04-18 00:01:33"
+                end_date:
+                  type: string
+                  required: true
+                  example: "2023-05-18 00:01:33"
                 max_weight:
                   type: integer
                   required: true
@@ -335,7 +351,17 @@ paths:
                   type: string
                   required: true
                   example: "налич"
-                  description: "Тип оплаты ( нал/безнал, с НДС/без НДС, с предоплатой)"
+                  description: "Тип оплаты ( нал/безнал )"
+                payment_nds:
+                  type: string
+                  required: true
+                  example: "с НДС"
+                  description: "Тип оплаты ( с НДС/без НДС )"
+                prepaid:
+                  type: string
+                  required: true
+                  example: '0'
+                  description: 'с предоплатой'
                 ruble_per_kg:
                   type: integer
                   required: true
@@ -349,6 +375,24 @@ paths:
                   type: string
                   required: true
                   example: "Hanrayin dzayn"
+                description:
+                  type: string
+                  required: true
+                  example: "description about order"
+                manager_id:
+                  type: integer
+                  required: true
+                  example: 1
+                material_type:
+                  type: string
+                  required: true
+                  example: "зерновые"
+                  description: "инертные материалы, зерновые"
+                material_info:
+                  type: string
+                  required: true
+                  example: "кукуруза"
+                  description: "пшеница, ячмень, кукуруза, горох, рапс, рис, семечка,"
       responses:
         200:
           description: 'Successfully created'
